# valencechat

./: README.md  pyproject.toml  setup.cfg  setup.py
src/valencechat/: bot.py  framing.py  loaders.py  logger.py  parsers.py
src/valencechat/static/de/: verbalisations.txt
src/valencechat/static/en/: verbalisations.txt
