[build-system]
requires = [
    "setuptools==68.2.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "valencechat"
version = "0.1.0"
dependencies = [
    "fasttext>=0.9.2",
    "scipy>=1.10.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
