[metadata]
name = valencechat
version = 0.1.0
author = Aurelie Herbelot
author_email = aurelie@possible-worlds.xyz
description = Eliza-like chatbot to gather valence data about particular concepts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/possible-worlds-research/valencechat
project_urls =
    Docs = https://github.com/possible-worlds-research/valencechat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: AGPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* =
  *.txt
